--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "python.formatting.provider": "yapf",
-    "python.pythonPath": "${workspaceFolder}/venv/bin/python"
+    "python.pythonPath": "${workspaceFolder}/venv/bin/python",
+    "python.linting.pylintEnabled": false
 }
